fix syntax highlighter not showing background

--- a/themes/paper/static/style.css
+++ b/themes/paper/static/style.css
@@ -425,9 +425,6 @@ img {
   display: none;
 }
 /* inline */
-.post-content .highlight span {
-  background: rgba(170, 170, 100, 0.3) !important;
-}
 
 .post-content code {
   margin-left: 4px;
